--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="header__inner">
         <a class="logo" href="#">
-          <img class="logo__img" src="images/logo.svg">
+          <img class="logo__img" src="images/Logo.svg">
         </a>
         <nav class="menu">
           <ul class="menu__list">
